stop tracking cached assets

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -1,3 +1,109 @@
+{# HOME SLIDER #}
+{% block pe_home_slider %}
+	<section class="slider">
+		<div class="tp-banner">
+			<ul>
+				<!-- Slide -->
+				<li data-delay="7000" class="bg-white" data-transition="fade" data-slotamount="7" data-start-height="300" data-masterspeed="2000">
+					<div class="elements">
+						<div class="tp-caption tp-resizeme lfb"
+							 data-x="650"
+							 data-y="85"
+							 data-speed="1000"
+							 data-start="2040"
+							 data-easing="Power4.easeOut"
+							 data-endspeed="500"
+							 data-endeasing="Power1.easeIn"
+							 style="z-index: 4">
+							<img src="{{ asset('bundles/site/images/doctors.jpg') }}" width="500" height="560" alt="">
+						</div>
+						<h2 class="tp-caption lft skewtotop title bold"
+							data-x="12"
+							data-y="231"
+							data-speed="1000"
+							data-start="1700"
+							data-easing="Power4.easeOut"
+							data-endspeed="500"
+							data-endeasing="Power1.easeIn">
+							<strong><span class="text-color">Find</span> a <br>Physician</strong>
+						</h2>
+					</div>
+				</li>
+				<!-- Slide Ends -->
+				<!-- Slide -->
+				<li data-delay="7000" data-transition="fade" data-slotamount="7" data-start-height="300" data-masterspeed="2000">
+					<div class="elements">
+						<h2 class="tp-caption lft skewtotop title bold"
+							data-x="12"
+							data-y="151"
+							data-speed="1000"
+							data-start="1700"
+							data-easing="Power4.easeOut"
+							data-endspeed="500"
+							data-endeasing="Power1.easeIn">
+							<strong>Setting the standard <span class="text-color">for excellence</span><br/>in patient-centered care</strong>
+						</h2>
+						<div class="tp-caption lfr skewtoright description text-left hidden-xs"
+							 data-x="20"
+							 data-y="350"
+							 data-speed="1000"
+							 data-start="1900"
+							 data-easing="Power4.easeOut"
+							 data-endspeed="500"
+							 data-endeasing="Power1.easeIn"
+							 style="max-width: 600px">
+							<p>Our Care Coordinators and Transitional Care Managers are here to support you every step of the way.</p>
+						</div>
+					</div>
+					<img src="{{ asset('bundles/site/images/sections/slider/slider23-bg.jpg') }}" alt="" data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+				</li>
+				<!-- Slide Ends -->
+				<!-- Slide -->
+				<li data-delay="7000" class="bg-white" data-transition="fade" data-slotamount="7" data-start-height="300" data-masterspeed="2000">
+					<div class="elements">
+						<div class="tp-caption tp-resizeme lfb"
+							 data-x="650"
+							 data-y="85"
+							 data-speed="1000"
+							 data-start="2040"
+							 data-easing="Power4.easeOut"
+							 data-endspeed="500"
+							 data-endeasing="Power1.easeIn"
+							 style="z-index: 4">
+							<img src="{{ asset('bundles/site/images/shp-logo.png') }}" width="500" alt="">
+						</div>
+						<h2 class="tp-caption lft skewtotop title bold"
+							data-x="12"
+							data-y="231"
+							data-speed="1000"
+							data-start="1700"
+							data-easing="Power4.easeOut"
+							data-endspeed="500"
+							data-endeasing="Power1.easeIn">
+							<strong><span class="text-color">Join</span> SHP</strong>
+						</h2>
+						<div class="tp-caption lfr skewtoright description text-left hidden-xs"
+							 data-x="12"
+							 data-y="350"
+							 data-speed="1000"
+							 data-start="1900"
+							 data-easing="Power4.easeOut"
+							 data-endspeed="500"
+							 data-endeasing="Power1.easeIn"
+							 style="max-width: 600px">
+							<p>Click here to login or to request access to the SHP physician member website.</p>
+						</div>
+					</div>
+				</li>
+				<!-- Slide Ends -->
+			</ul>
+		</div>
+		<hr class="no-margin">
+	</section>
+	<!-- slider -->
+{% endblock %}
+
+
 {# TESTIMONIALS#}
 {% block pe_testimonials %}
 	<section id="testimonials" class="page-section light-bg">
